# abstract-factory-pattern-plan-animal

./: CMakeLists.txt
factory/: AbstractFactory.cpp  AbstractFactory.h
main/: main.cpp
model/animal/: Animal.h  Chicken.cpp  Chicken.h  Cow.cpp  Cow.h  Pig.cpp  Pig.h
model/plant/: Food.cpp  Food.h  Plant.h  Wood.cpp  Wood.h
